Deployment/kubernetes/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 3
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ubnetdef/lockdown-commerce-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: client-certs
              mountPath: /cockroach-certs
          command:
            - /bin/bash
            - -c
            - sleep 20; daphne -b 0.0.0.0 -p 8000 ldfinance.asgi:application #For some reason sleeping is required, otherwise we get: Is the server running on host "scoretrak-cockroachdb-public" (10.233.16.67) and accepting TCP/IP connections on port 26257?

#          livenessProbe:
#            httpGet:
#              path: /
#              port: 8000
#            initialDelaySeconds: 3
#            periodSeconds: 3

      volumes:
        - name: client-certs
          emptyDir: {}
        - name: cockroach-cert-token
          secret:
            secretName: cockroachdb-client-secret

---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - port: 8000
      name: http
