Deployment/kubernetes/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway-bank
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "bank.ubnetdef.org"
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-bank
spec:
  hosts:
    - "bank.ubnetdef.org"
  gateways:
    - gateway-bank
  http:
    - match:
        - uri:
            prefix: "/admin"
        - uri:
            prefix: "/api"
        - uri:
            prefix: "/static"
      route:
        - destination:
            host: backend
            port:
              number: 8000
    - route:
        - destination:
            host: frontend
            port:
              number: 80
